# llmshell

./: .gitignore  CONFIG_MIGRATION.md  LICENSE  MULTI_PROVIDER_GUIDE.md  Makefile  README.md  SETUP.md  demo.py  env.example  llmshell.sh  pyproject.toml  run.py
llmshell/: __init__.py  cli.py  config.py  core.py  llm.py  utils.py
tests/: __init__.py  test_utils.py
